--- a/frontend/src/places/components/PlaceItem.css
+++ b/frontend/src/places/components/PlaceItem.css
@@ -21,6 +21,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top;
 }
 
 .place-item__info h2,
@@ -46,6 +47,11 @@
 .place-item__actions button,
 .place-item__actions a {
   margin: 0.5rem;
+}
+
+.map-container {
+  height: 10rem;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
